--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "15.x",
+    "npm": "7.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
