--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,13 @@
-
 {
   "compilerOptions": {
-    "baseUrl": "./"
-  }
+    "module": "commonjs",
+    "target": "es6",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["resources/js/*"],
+      "@Components/*": ["resources/js/Components/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "public"]
 }
