--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,22 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["resources/js/*"],
-      "@Components/*": ["resources/js/Components/*"]
-    }
+    "target": "es2020",
+    "module": "esnext",
+    "lib": ["es2020", "dom"],
+    "jsx": "react",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "public"]
+  "exclude": ["dist", "node_modules"],
+  "compileOnSave": false
 }
